using System.ComponentModel.DataAnnotations;
using api.Utilities;

namespace api.Models
{
    public class Agendamento
    {
        [Required]
        [Guid]
        public Guid Id { get; init; }

        [Required]
        public Cliente Cliente { get; set; }

        [Required]
        [Guid]
        public Funcionario Funcionario { get; set; }

        [Required]
        [DateTime]
        public DateTime DataAgendamento { get; set; }

        public DateTime? DataConclusao
        {
            get;
            set
            {
                if (value == null)
                {
                    field = value;
                    return;
                }

                if (value < DataAgendamento)
                {
                    throw new ArgumentException(
                        "DataConclusao não pode ser anterior à data de agendamento."
                    );
                }

                field = value;
            }
        }

        [Required]
        public Servico[] Servicos { get; set; }

        [Required]
        [AllowedValues("agendado", "concluido", "cancelado")]
        public string Status { get; set; }

        [Range(0.01, 9999.99)]
        public double? ValorTotal { get; set; }

        public Agendamento(
            Guid id,
            Cliente cliente,
            Funcionario funcionario,
            DateTime dataAgendamento,
            DateTime? dataConclusao,
            Servico[] servicos,
            string status,
            double? valorTotal
        )
        {
            Id = id;
            Cliente = cliente;
            Funcionario = funcionario;
            DataAgendamento = dataAgendamento;
            DataConclusao = dataConclusao;
            Status = status;
            Servicos = servicos;
            ValorTotal = valorTotal;
        }
    }
}
