classDiagram
    class Pessoa {
        <<abstract>>
        - Id: Guid
        - Nome: string
        - Telefone: string
        - CPF: string?
        - Email: string?
        + Pessoa(id: Guid?, nome: string, telefone: string, cpf: string?, email: string?)
        + Pessoa(nome: string, telefone: string)
        + Pessoa(nome: string, telefone: string, cpf: string, email: string)
    }

    class Cliente {
        - DtNascimento: DateOnly?
        + Cliente(id: Guid?, nome: string, telefone: string, cpf: string?, email: string?, dtNascimento: DateOnly?)
        + Cliente(nome: string, telefone: string, cpf: string, email: string, dtNascimento: DateOnly)
        + Cliente(nome: string, telefone: string)
    }

    class Funcionario {
        - Endereco: string
        + Funcionario(id: Guid?, nome: string, telefone: string, cpf: string, email: string, endereco: string)
        + Funcionario(nome: string, telefone: string, cpf: string, email: string, endereco: string)
    }

    class Servico {
        - Id: Guid
        - Nome: string
        - Descricao: string?
        - Preco: double
        + Servico(id: Guid?, nome: string, descricao: string?, preco: double)
        + Servico(id: Guid?, nome: string, preco: double)
    }

    class Agendamento {
        - Id: Guid
        - Cliente: Cliente
        - Funcionario: Funcionario
        - DataAgendamento: DateTime
        - DataConclusao: DateTime?
        - Servicos: Servico[]
        - Status: string
        - ValorTotal: double?
        + Agendamento(id: Guid?, cliente: Cliente, funcionario: Funcionario, dataAgendamento: DateTime, dataConclusao: DateTime?, servicos: Servico[], status: string, valorTotal: double?)
    }

    Pessoa <|-- Cliente
    Pessoa <|-- Funcionario
    Agendamento --> "1" Cliente
    Agendamento --> "1" Funcionario
    Agendamento --> "*" Servico
